objects/EXPRN__Portfolio__c.object
<CustomObject>
    <description>Collection of Accounts with M:M relationship with Accounts Object.</description>
    <fields>
        <fullName>EXPRN__Check_box_if_enrolling_this_portfolio_in__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check box if enrolling this portfolio in</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EXPRN__No_of_Account_in_Portfolio__c</fullName>
        <label>No. of Accounts in Portfolio</label>
        <summaryForeignKey>EXPRN__AccountPortfolioJn__c.EXPRN__Portfolio__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EXPRN__Portfolio_ID__c</fullName>
        <label>Portfolio ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Select_Model__c</fullName>
        <label>Select Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial Intelliscore</fullName>
                </value>
                <value>
                    <fullName>Intelliscore Plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Experian Portfolio</label>
    <nameField>
        <label>Portfolio Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experian Portfolios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>